@@ -1,5 +1,6 @@
 Version 3.8
 
+* IMPROVEMENT: Integration tests configuration file error handling improved.
 * IMPROVEMENT: Handling for reading server responses from tlv files.
 * IMPROVEMENT: Created KSI_HmacHasher interface for incremental HMAC computation.
 * IMPROVEMENT: Added detailed coverage report in html format.
